Selup all layour added

--- a/RMS.App/Views/Departments/Delete.cshtml
+++ b/RMS.App/Views/Departments/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Delete Department";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Delete Department</h2>
