--- a/RMS.App/Views/Departments/Details.cshtml
+++ b/RMS.App/Views/Departments/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Department Details";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Department Details</h2>
