--- a/RMS.App/Views/Designations/Delete.cshtml
+++ b/RMS.App/Views/Designations/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Delete Designation";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Delete Designation</h2>
