--- a/RMS.App/Views/EmployeeTypes/Details.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Employee Type Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Employee Type Details</h2>
