--- a/RMS.App/Views/Employees/Details.cshtml
+++ b/RMS.App/Views/Employees/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Employee Details";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Employee Details</h2>
