--- a/RMS.App/Views/Organizations/Details.cshtml
+++ b/RMS.App/Views/Organizations/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Organization Details";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Organization Details</h2>
