--- a/RMS.App/Views/Organizations/Edit.cshtml
+++ b/RMS.App/Views/Organizations/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit Organization";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Edit Organization</h2>
