--- a/RMS.App/Views/Queue/Index.cshtml
+++ b/RMS.App/Views/Queue/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Setup Queue";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 
