--- a/RMS.App/Views/Queue/RequisitionQueue.cshtml
+++ b/RMS.App/Views/Queue/RequisitionQueue.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "RequisitionQueue";
+    ViewBag.Title = "Requisition Queue";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Requisition Queue</h2>
