--- a/RMS.App/Views/VehicleTypes/Create.cshtml
+++ b/RMS.App/Views/VehicleTypes/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create Vehicle Type";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Create Vehicle Type</h2>
