--- a/RMS.App/Views/Designations/Create.cshtml
+++ b/RMS.App/Views/Designations/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create Designation";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Create Designation</h2>
