--- a/RMS.App/Views/Designations/Details.cshtml
+++ b/RMS.App/Views/Designations/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Designation Details";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Designation Details</h2>
