--- a/RMS.App/Views/Designations/Edit.cshtml
+++ b/RMS.App/Views/Designations/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit Designation";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Edit Designation</h2>
