--- a/RMS.App/Views/EmployeeTypes/Create.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create Employee Type";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Create Employee Type</h2>
