--- a/RMS.App/Views/EmployeeTypes/Delete.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete Employee Type";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Delete Employee Type</h2>
