--- a/RMS.App/Views/EmployeeTypes/Edit.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit Employee Type";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Edit Employee Type</h2>
