--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Employee And Driver List";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 @section styles
 {
@@ -123,12 +124,6 @@
                                 </td>
                             </tr>
                         }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td class="text-center text-danger" colspan="12"> Data Not Found!</td>
-                        </tr>
                     }
                 }
             </tbody>
