--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "Create Organization";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Create Organization</h2>
