--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Organization List";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 @section styles
 {
@@ -67,13 +68,6 @@
                         </td>
                     </tr>
                 }
-            }
-            else
-            {
-                <tr>
-                    <td class="text-center text-danger" colspan="5"><strong>Data Not Found!</strong> </td>
-                </tr>
-
             }
         }
         </tbody>
