--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -29,7 +29,7 @@
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
     </p>
-    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
+    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
         <tr class="bg-info">
             <th>
@@ -108,12 +108,6 @@
                         </td>
                     </tr>
                 }
-            }
-            else
-            {
-                <tr>
-                    <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
-                </tr>
             }
         }
         </tbody>
