--- a/RMS.App/Views/VehicleTypes/Edit.cshtml
+++ b/RMS.App/Views/VehicleTypes/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit Vehicle Type";
+    Layout = "~/Views/Shared/_LayoutSetupAll.cshtml";
 }
 
 <h2>Edit Vehicle Type</h2>
