--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -14,15 +14,32 @@
             <h4>Assigned Requisition Info :</h4>
             <br/>
             <table class="table table-light table-active table-primary dt-responsive nowrap">
-                
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
                 </tr>
-                <tr>
-                    <td>@Html.DisplayName("Requestor Full Name")</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
-                </tr>
+
+                @if (Model.Requisition.RequestFor == "Own")
+                {
+                    <tr>
+                        <td>@Html.DisplayName("Requestor Full Name")</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
+                    </tr>
+                }
+
+                @if (Model.Requisition.RequestFor != "Own")
+                {
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.RequestFor)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayName("Requiest By")</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
+                    </tr>
+                }
+
+
                 <tr>
                     <td>@Html.DisplayName("Designation")</td>
                     <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
@@ -35,10 +52,7 @@
                     <td>@Html.DisplayNameFor(model => model.Employee.Email)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.Employee.Email)</td>
                 </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.RequestFor)</td>
-                </tr>
+
             </table>
         </div>
 
@@ -66,6 +80,10 @@
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.PassengerQty)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.PassengerQty)</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.RequisitionType)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.RequisitionType)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.Description)</td>
