--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -70,11 +70,11 @@
                         <li class="dropdown">
                             @if (@ViewBag.count > 0)
                             {
-                                <button title="Unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;"> &nbsp; &nbsp; @ViewBag.count</span></span></button>
+                                <a title="Unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge"  data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
                             }
                             else
                             {
-                                <button title="You have no unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i> &nbsp; &nbsp; @ViewBag.count</span></button>
+                                <a title="You have no unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
                             }
 
                             <ul class="dropdown-menu">
