--- a/RMS.App/Views/Queue/RequisitionQueue.cshtml
+++ b/RMS.App/Views/Queue/RequisitionQueue.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Requisition Queue</h2>
+<br/>
 <ol class="breadcrumb">
     
     <li class="breadcrumb-item active">My Dashboard</li>
@@ -46,9 +47,24 @@
             </a>
         </div>
     </div>
-
     <div class="col-xl-3 col-sm-6 mb-3">
         <div class="card text-white bg-success o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-support"></i>
+                </div>
+                <div class="mr-5">@ViewBag.OnProcessRequest On Process Request!</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("OnProcess", "AssignRequisitions")">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-shopping-cart"></i>
@@ -63,27 +79,12 @@
             </a>
         </div>
     </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-danger o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fa fa-fw fa-support"></i>
-                </div>
-                <div class="mr-5">@ViewBag.OnProcessRequest On Process Request</div>
-            </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("OnProcess", "AssignRequisitions")">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fa fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
+    
 </div>
 <!-- Area Chart Example-->
 <div class="card mb-3">
     <div class="card-header">
-        <i class="fas fa-users"></i>Total Registered Employee
+        <i class="fa fa-user"></i> Total Registered Employee
     </div>
     <div class="card-body">
             <p>
@@ -147,7 +148,7 @@
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-danger o-hidden h-100">
+            <div class="card text-white bg-secondary o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon">
                         <i class="fa fa-fw fa-support"></i>
