--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -99,11 +99,14 @@
                             @Html.DisplayFor(modelItem => item.Requisition.RequisitionType)
                         </td>
                         <td>
+                            @if (item.StatusType == "New")
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId },new {@class="btn btn-warning btn-sm"})<span> </span>
+                            }
 
-                            @Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId})|
-                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}) |
+                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-success btn-sm" }) <span> </span>
 
-                            @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})
+                            @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id}, new { @class = "btn btn-info btn-sm" })
 
                         </td>
                     </tr>
