--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -42,7 +42,7 @@
 
                     @if (User.IsInRole("Administrator"))
                     {
-                        <li>@Html.ActionLink("Setup Queue", "Index", "Queue")</li>
+                        <li>@Html.ActionLink("Setup Queue", "SetupQueue", "Queue")</li>
                     }
                     @if (User.IsInRole("Controller") || User.IsInRole("Administrator"))
                     {
@@ -74,7 +74,7 @@
                             }
                             else
                             {
-                                <a title="You have no unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
+                                <a title="You have no unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
                             }
 
                             <ul class="dropdown-menu">
